src/objects/Apttus_Revenue2__RevRec_Period__c.object
<CustomObject>
    <description>Holds revenue recognition period constants</description>
    <fields>
        <fullName>Apttus_Revenue2__Current_Period_Date__c</fullName>
        <description>Current period date</description>
        <inlineHelpText>Current period date</inlineHelpText>
        <label>Current Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Forecast_Period_Date__c</fullName>
        <description>Forecast period date</description>
        <inlineHelpText>Forecast period date</inlineHelpText>
        <label>Forecast Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__LegalEntityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity Id</label>
        <referenceTo>Apttus_Config2__LegalEntity__c</referenceTo>
        <relationshipLabel>RevRec Period</relationshipLabel>
        <relationshipName>RevRecPeriod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RevRec Period</label>
    <nameField>
        <label>RevRec Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRec Period</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>